--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: auto;
   pointer-events: none;
+  width: 140px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
