--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -2,14 +2,14 @@
     display: grid;
 }
 
-#card{
+#cardProducto{
     background-color: #9b0006; 
     background-position: center; 
     background-size: cover; 
     background-repeat: no-repeat; 
     height: 450px; 
     max-width: 100%;
-    background-position-y: 115px;
+    background-position-y: 165px;
     margin:1rem;
 }
 
@@ -17,18 +17,19 @@
     color:#fff;
 }
 
-.numero{
-    margin-bottom: auto;
-    font-size: 3.75rem;
+.pPrice{
+    color:#fff201;
+    font-weight: 700 !important;
+font-size: 1.5rem !important;
 }
 
-.pPosicion{
-    color:#fff201;
+.pDescription{
+    color:#fff;
     font-weight: 700 !important;
 font-size: .75rem !important;
 }
 
-.pNombre{
+.pTitle{
     font-weight: 700 !important;
     font-size: 1.75rem !important;
 }
