--- a/src/components/Header/NavBar.css
+++ b/src/components/Header/NavBar.css
@@ -5,3 +5,11 @@
 #header{
     background-color: #9b0006;
 }
+
+.dropdown-menu{
+    background-color: #9b0006 !important;
+}
+
+#basic-nav-dropdown {
+    color: white;
+}
