--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -17,13 +17,13 @@
     color:#fff;
 }
 
-.pPrice{
+.productPrice{
     color:#fff201;
     font-weight: 700 !important;
 font-size: 1.5rem !important;
 }
 
-.pTitle{
+.productTitle{
     font-weight: 700 !important;
     font-size: 1.75rem !important;
 }
