--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -3,6 +3,20 @@
     grid-template-columns: repeat(4,1fr); 
   }
 
+@media (max-width:991px){
+  .divProduct{
+    display:grid;
+    grid-template-columns: repeat(2,1fr); 
+  }
+}
+
+@media (max-width:767px){
+  .divProduct{
+    display:grid;
+    grid-template-columns: repeat(1,1fr); 
+  }
+}
+
 .titlePosicion{
   margin: 50px 0;
   font-size: 1.5rem;
@@ -10,7 +24,28 @@
 
 .titlePrincipal{
   text-align: center;
-  margin: 2rem;
+  color: #000;
+  font-size: 2.25rem;
 }
+
+.banner{
+  width: 55%;
+  height: auto;
+}
+
+.banner2{
+  padding: 3rem;
+  width:45%;
+}
+
+.banner img{
+max-width: 100%;
+height: auto;
+}
+
+
+
+
+
 
   
