--- a/src/components/Plantilla/CardComponent/CardJugador.css
+++ b/src/components/Plantilla/CardComponent/CardJugador.css
@@ -25,6 +25,8 @@
     color:#fff201;
     font-weight: 700 !important;
 font-size: .75rem !important;
+display: flex;
+align-items: end;
 }
 
 .jugadorNombre{
