--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -17,7 +17,7 @@
     font-weight: 700 !important;
 }
 
-.cantidad{
+.quantity{
     font-weight: 700 !important;
 }
 
@@ -27,7 +27,7 @@
     margin-right: 1rem;
 }
 
-#eliminar{
+#delete{
     border-color: #9b0006;
     background-color: #9b0006;
     color: #fff;
