--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -20,3 +20,25 @@ font-size: 1rem !important;
     font-weight: 700 !important;
     font-size: 3rem !important;
 }
+
+@media (max-width:768px){
+    .cardProductDetail img{
+        max-width: 100%;
+        height: 250px;
+    }
+    .cardProductDetail div{
+        max-width: 100%;
+        text-align: center;
+    }
+    .cardProductDetail{
+        grid-template-columns: none;
+    }
+    .productPriceDetail{
+        font-weight: 700 !important;
+    font-size: 1.5rem !important;
+    }
+    .productTitleDetail{
+        font-weight: 700 !important;
+        font-size: 2rem !important;
+    }
+}
