--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -17,7 +17,7 @@
   }
 }
 
-.titlePosicion{
+.titlePosition{
   margin: 50px 0;
   font-size: 1.5rem;
 }
@@ -25,7 +25,8 @@
 .titlePrincipal{
   text-align: center;
   color: #000;
-  font-size: 2.25rem;
+  font-size: 2.5rem;
+  font-weight: 900;
 }
 
 .banner{
@@ -36,6 +37,12 @@
 .banner2{
   padding: 3rem;
   width:45%;
+  display: grid;
+}
+
+.banner3{
+  display: grid;
+  align-items: end;
 }
 
 .banner img{
