--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -65,7 +65,7 @@
 }
 
 @media (max-width:768px){
-    .teamo1{
+    .team1{
         display: flex;
         justify-content: center;
         align-items: center;
