--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -64,7 +64,7 @@
     margin: 0 .5rem;
 }
 
-@media (max-width:768px){
+@media (max-width:28rem){
     .team1{
         display: flex;
         justify-content: center;
