--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -21,7 +21,7 @@
 .buttonBuy{
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     text-decoration: none;
 }
 
@@ -35,7 +35,7 @@
     font-size: 1.5rem !important;
     display:flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     margin-bottom: 0;
 }
 
