--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -21,13 +21,13 @@
 
 .team1{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 
 .team2{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
